# poo2_2020_2_ui_reactiva

./: CMakeLists.txt  app.cpp  app.h  button.cpp  button.h  component.cpp  component.h  label.cpp  label.h  main.cpp  my_app.cpp  my_app.h
